@@ -258,7 +258,7 @@ v for non-negative argument X, and non-negative order N+ALPHA.
 		by[i] = by[0];
 	    return;
 	}
-	xna = ftrunc(nu + .5);
+	xna = trunc(nu + .5);
 	na = (long) xna;
 	if (na == 1) {/* <==>  .5 <= *alpha < 1	 <==>  -5. <= nu < 0 */
 	    nu -= xna;
@@ -405,7 +405,7 @@ L220:
 	       Use Campbell's asymptotic scheme.
 	       ---------------------------------------------------------- */
 	    na = 0;
-	    d1 = ftrunc(ex / fivpi);
+	    d1 = trunc(ex / fivpi);
 	    i = (long) d1;
 	    dmu = ex - 15. * d1 - d1 * pim5 - (*alpha + .5) * M_PI_2;
 	    if (i - (i / 2 << 1) == 0) {
