@@ -1,6 +1,7 @@
 /*
  *  Mathlib : A C Library of Special Functions
  *  Copyright (C) 1998 Ross Ihaka
+ *  Copyright (C) 2013 R Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -28,8 +29,16 @@
 
 #include "nmath.h"
 
+#ifdef OLD
 double ftrunc(double x)
 {
 	if(x >= 0) return floor(x);
 	else return ceil(x);
 }
+#else
+// use C99 function
+double ftrunc(double x)
+{
+    return trunc(x);
+}
+#endif
